--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: python37
-entrypoint: gunicorn index:server
-instance_class: F2
+entrypoint: gunicorn -c gunicorn.conf.py index:server --preload
+instance_class: F4
 automatic_scaling :
-    target_cpu_utilization: 0.75
+    target_cpu_utilization: 0.95
