--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ dash-html-components==1.0.2
 dash-renderer==1.2.4
 dash-table==4.6.1
 decorator==4.4.2
+dnspython==1.16.0
+eventlet==0.25.1
 Flask==1.1.1
 Flask-Compress==1.4.0
 future==0.18.2
+greenlet==0.4.15
 gunicorn==20.0.4
 idna==2.9
 imageio==2.8.0
@@ -21,6 +24,7 @@ joblib==0.14.1
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.2.0
+monotonic==1.5
 networkx==2.4
 numpy==1.18.1
 ordereddict==1.1
